fix: correct icon-rednote sizing and alignment to match Bootstrap Icons
- Fix icon path from ../../images/ to ../images/ for proper Vite resolution
- Adjust dimensions to 18x18px to match Bootstrap Icons fs-5 sizing
- Add vertical-align: -.125em to match Bootstrap Icons alignment
- Add rednote.svg asset import to Vite build process

--- a/themes/june/sass/components/_common.scss
+++ b/themes/june/sass/components/_common.scss
@@ -66,3 +66,12 @@
     @extend .btn-outline-light-primary;
     margin-top: 1.5rem;
 }
+
+.icon-rednote {
+    display: inline-block;
+    width: 1.125rem !important;  // 18px to match Bootstrap Icons width
+    height: 1.125rem !important;  // 18px to match Bootstrap Icons height
+    vertical-align: -.125em;  // Match Bootstrap Icons vertical alignment
+    background: url('../images/rednote.svg') no-repeat center center;
+    background-size: contain;
+}
